# metal-rendering

metal-rendering-rs/: Cargo.toml  mudar logging
metal-rendering-rs/src/: lib.rs  main.rs  util.rs
metal-rendering-rs/src/shaders/: fragment.wgsl  shaders.wgsl  shaders_vertexColorStruct.wgsl
metal-rendering-rs/src/state/: state.rs
metal-rendering-rs/src/util/: texture.rs  vertex.rs
metal-rendering/metal-rendering/: AppDelegate.swift  Renderer.swift  ShaderDefinitions.h  Shaders.metal  ViewController.swift  metal-rendering-Bridging-Header.h
metal-rendering/metal-rendering.xcodeproj/: project.pbxproj
metal-rendering/metal-rendering/Base.lproj/: Main.storyboard
metal-rendering/metal-renderingTests/: metal_renderingTests.swift
metal-rendering/metal-renderingUITests/: metal_renderingUITests.swift  metal_renderingUITestsLaunchTests.swift
