[package]
name = "metal-rendering-rs"
version = "0.1.0"
authors = ["Martinho <martinho.tavares@live.com.pt>"]
edition = "2021"

# declaramos como build por causa do wasm
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "metal-rendering-rs"
path = "src/main.rs"


[dependencies]
cfg-if = "1"
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
bytemuck = { version = "1.13.0", features = [ "derive" ] }
attohttpc = "0.24.0"
anyhow = "1.0"
cgmath = "0.18"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}